[tool.poetry]
name = "timers2"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Jinja2 = "^3.1.2"
boto3 = "^1.24.26"
Werkzeug = "^2.1.2"
python-dateutil = "^2.8.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
